--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Coso de Datepicker</title>
+	<title>Coso para describitDatepicker</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<style type="text/css">
 		input[type=time], input[type=date]{
-			background-color: rgba(255,150,150,0.5);
+			background-color: rgba(232,144,144,0.5);
 		}
 
 	</style>
@@ -15,7 +15,7 @@
 <body>
 	<div>
 		<label for="mi_fecha">Fecha</label>
-		<input type="date" name="mi_fecha" id="mi_fecha" value="">
+		<input type="date" name="mi_fecha" id="mi_fecha" value="vamos aponer un valo" placeholder="Algo">
 		<br>
 		<label for="otra_fecha">Otra fecha</label>
 		<input type="time" name="otra_fecha" id="otra_fecha">
