--- a/animation.html
+++ b/animation.html
@@ -54,7 +54,9 @@
 #ball::after {
 	content: "";
 	width: 80px; 
-	
+	height: 40px; 
+	position: absolute;
+	left: 30px;
 	top: 10px;
 	z-index: 10;
 	
