--- a/animation.html
+++ b/animation.html
@@ -54,16 +54,15 @@
 #ball::after {
 	content: "";
 	width: 80px; 
-	height: 40px; 
-	position: absolute;
-	left: 30px;
+	
+
 	top: 10px;
 	z-index: 10;
 	
 	border-radius: 40px / 20px;	
 }
 
-
+/* asmdlsadmkaamk */
 
 /* Animations */
 
