--- a/Grid.html
+++ b/Grid.html
@@ -4,80 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Tipo Bootstrap</title>
-	<link rel="stylesheet" href="">
-	<style>
-		html, body{
-			width: 100%;
-			font-size: 100%;
-			padding: 0;
-		}
-		.row:before, .row:after{
-	        content:"";
-	        display: float;
-	        overflow: hidden;
-	        visibility: hidden;
-	        clear:both;
-	        width: 0;
-	        height: 0;
-		}
-		.row{
-			background: gray;
-		 }
-		.container{
-			width: 960px;
-			margin: 0% auto;
-			padding: 0;
-			position: relative;
-			box-sizing: border-box;
-			background: red;
-			}
-		.columna, .columnas{
-			display: inline-block;
-			float: left;
-			margin-left: 2%;
-			margin-right: 0%;
-			box-sizing: border-box;
-			border-style: solid;
-			border-color: green;
-			position: relative;
-        	height: auto;         	
-        	background: blue;
-		}
-		.columna:first-child, .columnas:first-child{
-			margin-left: 0%;
-		}
-		.seis {
-			width: 15%;
-		}
-		.cinco{
-			width: 83%;
-		}
-		.cuatro{
-			width: 66%;
-		}
-		.tres{
-			width: 49%;
-		}
-		.dos.columna, .dos.columnas{
-			width: 32%;
-		}
-		.una.columna, .una.columnas{
-			width: 100%;
-		}
-		.cuatrocuatro{
-			width: 23.5%;
-		}
-		@media (min-width: 1200px) {			
-		}
-		@media (max-width: 1199px) and (min-width: 992px) {			
-		}
-		@media (max-width: 991px) and (min-width: 768px) {			
-		}
-		@media (min-width: 767px) {			
-		}
-		
+	<link rel="stylesheet" type="text/css" href="grid.css">
 
-	</style>
+	
 </head>
 <body>
 	<div class="container">
@@ -123,4 +52,4 @@
 
 	</div>
 </body>	
-</html>
+</html>	
