--- a/apisrestful.html
+++ b/apisrestful.html
@@ -91,11 +91,11 @@
 
 			botel.addEventListener('click', function(evt){
 				post.remove();
-				alert(txt + "borro");
+				// alert(txt + "borro");
 			})
 
 			lista.insertBefore(post, lista.firstChild);
-			alert(txt = "agrego");
+			// alert(txt = "agrego");
 			setTimeout(function(){post.classList.add('visible');},10);
 			
 
