--- a/apisrestful.html
+++ b/apisrestful.html
@@ -23,6 +23,7 @@
 		#listaNotas{
 			min-height: 3rem;
 			border: solid 1px #333;
+			transition: height 1s;
 		}
 
 		#listaNotas, textarea{
@@ -43,9 +44,10 @@
 			/*animation*/
 			opacity: 0;
 			visibility: hidden;
-			transition: opacity .6s, visibility .6s;
+			transition: opacity 1s, visibility 1s;
 		}
-
+		
+		
 		.visible{
 			visibility: visible;
 			opacity: 1;
@@ -90,7 +92,10 @@
 			// lista.appendChild(post);
 
 			botel.addEventListener('click', function(evt){
-				post.remove();
+				post.classList.remove('visible');
+				// setTimeout(function(){},700);
+				setTimeout(function(){post.remove();},700);
+				
 				// alert(txt + "borro");
 			})
 
